--- a/clean.cfg
+++ b/clean.cfg
@@ -41,3 +41,4 @@ sp_func_call_paren		= remove	# "foo (" vs "foo("
 sp_func_proto_paren		= remove	# "int foo ();" vs "int foo();"
 eat_blanks_before_close_brace	= TRUE
 eat_blanks_after_open_brace	= TRUE
+code_width          = 80
